Fix Vietnamese line wrapping to two lines in game info

--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,7 @@ table.board td .drag,
 
 #score {
   position: relative;
-  min-width: 284px;
+  min-width: 288px;
   background: #fafafa;
   background: -webkit-gradient(linear, left top, left bottom, from(#f7fef7), to(#fafafa));
   background: linear-gradient(#f7fef7, #fafafa);
